# Consulta_Preco-urllib

./: PyWhatKit_DB.txt  README.md  funcoes.py  main.py  pyproject.toml  starbuzz.py
